--- a/kitspace.yaml
+++ b/kitspace.yaml
@@ -1,6 +1,6 @@
-summary: A description for your project # A description for your project
+summary: DropBot v3 40-channel high-voltage switching board # A description for your project
 
-site: https://example.com # A site you would like to link to (include http:// or https://) # A site you would like to link to (include http:// or https://)
+site: https://github.com/sci-bots/dropbot-40-channel-HV-switching-board.kicad # A site you would like to link to (include http:// or https://) # A site you would like to link to (include http:// or https://)
 
 color: black # for example # for example
    # The solder resist color of the preview rendering. If left undefined "green" is used. Can be one of:
