--- a/kitspace.yaml
+++ b/kitspace.yaml
@@ -2,7 +2,7 @@ summary: DropBot v3 40-channel high-voltage switching board # A description for 
 
 site: https://github.com/sci-bots/dropbot-40-channel-HV-switching-board.kicad # A site you would like to link to (include http:// or https://) # A site you would like to link to (include http:// or https://)
 
-color: black # for example # for example
+color: black
    # The solder resist color of the preview rendering. If left undefined "green" is used. Can be one of:
        # - green
        # - red
@@ -13,7 +13,7 @@ color: black # for example # for example
        # - purple
        # - yellow
 
-bom: manufacturing/default/40-channel-hv-switching-board.csv
+bom: manufacturing/default/40-channel-hv-switching-board-BOM.csv
   # A path to your 1-click-bom in case it isn't `1-click-bom.tsv`. Supported extensions are:
   # - .tsv
   # - .csv
@@ -37,5 +37,3 @@ pcb-services: [aisler, pcbway, oshpark, jlcpcb]
   #      - pcbway
   #      - oshpark
   #      - jlcpcb
-
-multi: # Identifier field only used if the repository contains multiple projects. See below for details.
