--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
       PROJECT_NAME: 40-channel-hv-switching-board
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
